Use white instead of $material-white

--- a/stylus/Humanoid.styl
+++ b/stylus/Humanoid.styl
@@ -35,7 +35,7 @@ $highlight-bg-color = #f3f3f3
 // Global styles
 html, body
   margin 1em
-  background-color $material-white
+  background-color white
   font 16px normal $base-font
 
 body *
