$material-lime and -yellow removed; -cyan default

--- a/css/Humanoid.css
+++ b/css/Humanoid.css
@@ -16,7 +16,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #03a9f4;
+  color: #00bcd4;
   font-family: Roboto, sans-serif;
   font-weight: 400;
 }
@@ -25,7 +25,7 @@ h2 {
   font-weight: 300;
 }
 a {
-  color: #03a9f4;
+  color: #00bcd4;
   text-decoration: none;
 }
 a:hover {
@@ -50,7 +50,7 @@ pre code {
 hr {
   margin: 2em;
   height: 0.5px;
-  background-color: #03a9f4;
+  background-color: #00bcd4;
   border-width: 0;
 }
 
