--- a/stylus/Humanoid.styl
+++ b/stylus/Humanoid.styl
@@ -15,8 +15,8 @@ $material-cyan = #00bcd4
 $material-teal = #009688
 $material-green = #4caf50
 $material-light-green = #8bc34a
-$material-lime = #cddc39
-$material-yellow = #ffeb3b
+// $material-lime = #cddc39
+// $material-yellow = #ffeb3b
 $material-amber = #ffc107
 $material-orange = #ff9800
 $material-deep-orange = #ff5722
@@ -26,7 +26,7 @@ $material-blue-grey = #607d8b
 
 // TODO: Remove/comment the colors that look bad on white bg
 
-$accent-color = $material-light-blue
+$accent-color = $material-cyan
 $base-color = #777
 $highlight-bg-color = #f3f3f3
 
