--- a/stylus/Watson.styl
+++ b/stylus/Watson.styl
@@ -48,7 +48,7 @@ img
 // Code
 code
   display inline-block
-  padding 0.5em
+  padding .5em
   background-color $highlight-bg-color
   font-family $mono-font
 
@@ -62,6 +62,6 @@ pre code
 // Horizontal rule
 hr
   margin 2em
-  height 0.5px
+  height .5px
   background-color $accent-color
   border-width 0
