Add style for kbd

--- a/stylus/Humanoid.styl
+++ b/stylus/Humanoid.styl
@@ -92,7 +92,12 @@ pre code
   overflow-x scroll
   font-family $mono-font
 
-// TODO: kbd
+kbd
+  padding 2px 4px
+  margin 3px
+  background-color $highlight-bg-color
+  font-family $mono-font
+  border-radius 3px
 
 // Horizontal rule
 hr
