--- a/css/Humanoid.css
+++ b/css/Humanoid.css
@@ -62,6 +62,13 @@ pre code {
   overflow-x: scroll;
   font-family: "Droid Sans Mono", monospace;
 }
+kbd {
+  padding: 2px 4px;
+  margin: 3px;
+  background-color: #f3f3f3;
+  font-family: "Droid Sans Mono", monospace;
+  border-radius: 3px;
+}
 hr {
   margin: 2em;
   height: 0.5px;
