Change body font to Roboto Slab

--- a/stylus/Humanoid.styl
+++ b/stylus/Humanoid.styl
@@ -17,7 +17,7 @@
 
 // Fonts
 $heading-font = Roboto, sans-serif
-$base-font = "Droid Sans", sans-serif
+$base-font = "Roboto Slab", sans-serif
 $mono-font = "Droid Sans Mono", monospace
 
 // Colors
