--- a/css/Humanoid.css
+++ b/css/Humanoid.css
@@ -17,7 +17,7 @@ html,
 body {
   margin: 1em;
   background-color: #fff;
-  font: 16px normal "Droid Sans", sans-serif;
+  font: 16px normal "Roboto Slab", sans-serif;
 }
 body * {
   max-width: 800px;
